# pyremindkit

./: .gitignore  Makefile  README.md  pyproject.toml
examples/: basic_usage.py
requirements/: requirements-dev.txt
src/pyremindkit/: __init__.py  core.py  core_v2.py
